--- a/stack/mysql/docker-compose.yml
+++ b/stack/mysql/docker-compose.yml
@@ -1,12 +1,14 @@
 version: "3.3"
 
 services:
-  mariadb:
+  mysql:
     image: mysql:8
     volumes:
       # Store mysql data
-      - ../vols/mariadb:/var/lib/mysql:rw
-      - ../configs/mariadb:/etc/mysql/conf.d:ro
+      - type: bind
+        source: ../../vols/mysql
+        target: /var/lib/mysql
+      
     networks:
       - local
     # Stay as swarm, however it should'nt be replicated
@@ -18,6 +20,8 @@ services:
         delay: 10s
       restart_policy:
         condition: on-failure
+      placement:
+        constraints: [ node.role == manager ]
       labels:
         # Disable traefik on this container
         - "traefik.enable=false"
