--- a/scripts/.env
+++ b/scripts/.env
@@ -3,3 +3,14 @@
 MYSQL_IMAGE=mysql
 MYSQL_VERSION=8
 MYSQL_SERVICE_NAME=mysql
+
+# Be careful with the wordpress requiremnts when modifying this image
+PHP_IMAGE=devilbox/php-fpm
+PHP_VERSION=8.1-prod
+PHP_SERVICE_NAME=php
+
+NGINX_IMAGE=nginx
+NGINX_VERSION=1.21.6
+
+TRAEFIK_IMAGE=traefik
+TRAEFIK_VERSION=2.6
