--- a/stack/nginx/docker-compose.yml.template
+++ b/stack/nginx/docker-compose.yml.template
@@ -2,13 +2,13 @@ version: '3.3'
 
 services:
   {DOMAIN_NAME}:
-    image: nginx
+    image: {NAME}:{TAG}
     volumes:
       - ./wordpress:/var/www/html:ro
       - ./nginx:/etc/nginx/conf.d:rw
     networks:
+      - content
       - web
-      - local
     deploy:
       mode: replicated
       replicas: 1
@@ -27,9 +27,9 @@ services:
 
 
 networks:
+  content:
+    external:
+      name: content
   web:
     external:
       name: web
-  local:
-    external:
-      name: local
